--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<meta http-equiv="Pragma" content="no-cache">
 		<meta http-equiv="Expires" content="0">
 		<meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">
+		<link href="//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 		<!-- <link rel="icon" type="image/x-icon" href="static/img/favicon.ico"> -->
 		<script src="static/js/config.js"></script>
 		<!-- <script>
